[package]
name = "due"
version = "0.0.1"
authors = ["Aaron Janse <aaron@ajanse.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
regex = "1"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.24.0", features = ["chrono"] }
prettytable-rs = "^0.8"
